# Portfolio-With-Backend

./: pyproject.toml  requirements.txt
myapp/: urls.py
myapp/migrations/: 0006_alter_github_stats_id_alter_leetcode_stats_id_and_more.py
