[project]
name = "portfolio-with-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2024.7.4",
    "django==5.0.6",
    "django-allauth==0.62.1",
    "django-ckeditor==6.7.1",
    "django-cors-headers==4.3.1",
    "django-js-asset==2.2.0",
    "djangorestframework==3.15.1",
    "djangorestframework-simplejwt==5.3.1",
    "gunicorn==20.1.0",
    "pillow==10.3.0",
    "pyjwt==2.8.0",
    "python-decouple==3.8",
    "setuptools==70.0.0",
    "sqlparse==0.5.0",
    "tzdata==2024.1",
    "wheel==0.43.0",
    "whitenoise==6.7.0",
]
